--- a/iGEM/requirements.txt
+++ b/iGEM/requirements.txt
@@ -1,91 +1,6 @@
-absl-py==1.4.0
-astunparse==1.6.3
-beautifulsoup4==4.12.0
-bs4==0.0.1
-cachetools==5.3.1
-certifi==2022.12.7
-charset-normalizer==3.1.0
-click==8.1.3
-click-default-group==1.2.2
-cloup==0.13.1
-colour==0.1.5
-contourpy==1.1.0
-cycler==0.11.0
-Cython==0.29.35
-decorator==5.1.1
-filelock==3.12.2
-flatbuffers==23.5.26
-fonttools==4.40.0
-gast==0.4.0
-glcontext==2.3.7
-google-auth==2.20.0
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-grpcio==1.54.2
-h5py==3.9.0
-idna==3.4
-isosurfaces==0.1.0
-Jinja2==3.1.2
-keras==2.13.1rc0
-kiwisolver==1.4.4
-libclang==16.0.0
-manim==0.17.3
-ManimPango==0.4.3
-mapbox-earcut==1.0.1
-Markdown==3.4.3
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-matplotlib==3.7.1
-mdurl==0.1.2
-moderngl==5.8.2
-moderngl-window==2.4.4
-mpmath==1.3.0
-multipledispatch==0.6.0
-networkx==2.8.8
-numpy==1.24.1
-oauthlib==3.2.2
-opt-einsum==3.3.0
-packaging==23.1
-pandas==2.0.2
-Pillow==9.5.0
-protobuf==4.23.3
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pycairo==1.24.0
-pydub==0.25.1
-pyglet==2.0.7
-Pygments==2.15.1
-pyobjc-core==9.2
-pyobjc-framework-Cocoa==9.2
-pyparsing==3.1.0
-pyrr==0.10.3
-python-dateutil==2.8.2
-pytz==2023.3
-requests==2.28.2
-requests-oauthlib==1.3.1
-rich==13.4.2
-rsa==4.9
-scipy==1.10.1
-screeninfo==0.8.1
-seaborn==0.12.2
-six==1.16.0
-skia-pathops==0.7.4
-soupsieve==2.4
-srt==3.5.3
-svgelements==1.9.5
-sympy==1.12
-tensorboard==2.13.0
-tensorboard-data-server==0.7.1
-tensorflow==2.13.0rc1
-tensorflow-estimator==2.13.0rc0
-tensorflow-macos==2.13.0rc1
-termcolor==2.3.0
-torch==2.0.1
-torchinfo==1.8.0
-tqdm==4.65.0
-typing_extensions==4.6.3
-tzdata==2023.3
-urllib3==1.26.15
-watchdog==2.3.1
-Werkzeug==2.3.6
-wrapt==1.15.0
+matplotlib==3.7.2
+numpy==1.25.2
+pandas==2.0.3
+pyparsing==3.0.9
+scikit-learn==1.3.0
+scipy==1.11.1
